updating site: portfolio, jekyll url, muted blog content, contact info

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -71,31 +71,54 @@ title: Hadrien's < portfolio >
 		</script>	
 </head>
 
-
 <div class='section'><h1>Profile</h1><br></div>
 
 <div class="resume">
 	<div class="func">
+
+			<div class = "download">
+				<h3><i class="fa fa-download"></i><a href="/assets/downloads/HPNunes_Resume.pdf" target='blank' title="Download my resume (pdf)">Resume</a></h3>
+			</div>
+
 			<div class="work">
 			  <h3><i class="fa fa-briefcase"></i>Work Experience</h3>
 			  <ul>
-				<li><span>Associate Consultant</span><small>Mar 2017 - Jul 2017</small></li>
-				<img id="HIP" alt="High Impact Consulting, Inc." src="/images/svgs/hipLogo.png"/>
-				<li><span>Mapping Platform Specialist</span><small>Mar 2015 - Jul 2016</small></li>
-				<img id="xAd" width="166" height="327" alt="xAd, Inc. (now rebranded as Groundtruth)" src="/images/svgs/xadLogo.png"/>
-				<li><span>Data Visualization & Mapping Intern </span><small>Jun 2014 - Nov 2014</small></li>
-				<img id="HIP" width="166" height="327" alt="High Impact Performance, Inc." src="/images/svgs/hipLogo.png"/>
-				<li><span>Media Intern, Education Programs</span><small>Jan 2014 - Apr 2014</small></li>
-				<img id="Nat Geo" width="166" height="327" alt="National Geographic, Education Division" src="/images/svgs/natgeoLogo.png"/>			
+
+				<p><li><span title="High Impact Consulting, Inc.">Associate Consultant</span><img id="HIP" src="/images/svgs/hipLogo.png"/>
+				<small>Mar 2017 - Jul 2017</small></li>
+				</p>
+
+				<p><li><span title="xAd, Inc. (now rebranded as Groundtruth)">Mapping Platform Specialist</span><img id="xAd" width="166" height="327" src="/images/svgs/xadLogo.png"/>
+				<small>Mar 2015 - Jul 2016</small></li>
+				</p>
+
+				<p><li><span title="High Impact Performance, Inc.">Data Visualization & Mapping Intern </span><img id="HIP" width="166" height="327" src="/images/svgs/hipLogo.png"/>
+				<small>Jun 2014 - Nov 2014</small></li>
+				</p>
+
+				<p><li><span title="National Geographic, Education Division">Media Intern, Education Programs</span><img id="Nat Geo" width="166" height="327" src="/images/svgs/natgeoLogo.png"/>
+				<small>Jan 2014 - Apr 2014</small></li>
+				</p>
+
 			  </ul>
 			</div>
 
 			<div class="edu">
 			  <h3><i class="fa fa-graduation-cap"></i>Education</h3>
 			  <ul>
-				<li><span>Environmental Assessment, Menv</span><small>Planned 2019</small></li>
-				<li><span>Data Analysis & Visualization, Certificate</span><small>Aug 2018</small></li>
-				<li><span>Geography, BA with a Minor in Geospatial Information & Technology</span><small>Dec 2013</small></li>
+
+					<p><li><span title="Concordia University">Menv Environmental Assessment</span><img id="Concordia University" src="/images/svgs/concordiaLogo.png"/>
+					<small>Planned 2019</small></li>
+					</p>
+
+					<p><li><span title="UC Berkeley Extension">Certificate, Data Analysis & Visualization</span><img id="UC Berkeley Extension" src="/images/svgs/ucbeLogo.png"/>
+					<small>Aug 2018</small></li>
+					</p>
+
+					<p><li><span title="UC Berkeley">BA Geography with a Minor in Geospatial Information & Technology</span><img id="UC Berkeley" src="/images/svgs/ucbLogo.png"/>
+					<small>Dec 2013</small></li>
+					</p>
+
 			  </ul>
 			</div>
 
@@ -108,7 +131,7 @@ title: Hadrien's < portfolio >
 	
 
 			<div class="skills-soft">
-					<h3><i class="fa fa-list"></i>Software Experience</h3>
+					<h3><i class="fa fa-list"></i>Applications & OS Experience</h3>
 						<div id='holder'></div>
 			</div>
 
@@ -185,7 +208,7 @@ title: Hadrien's < portfolio >
 <div class="portfolio">
 		<ul id="rig">
 				<li>
-						<a class="rig-cell" href="https://hp-nunes.github.io/WeatherPython/" target="blank">
+						<a class="rig-cell" href="https://hp-nunes.github.io/Charting-global-weather-with-OpenWeatherMap-API/" target="blank">
 							<img class="rig-img" src="/images/thumbs/th_weatherpy.png">
 							<span class="rig-overlay"></span>
 							<span class="rig-text">Using OpenWeatherMap's API to chart climate variability of cities relative to latitudinal variability</span>
