--- a/about/index.html
+++ b/about/index.html
@@ -19,73 +19,87 @@ title: < About > HP-Nunes
 			<script type="text/javascript">
 				//<![CDATA[
 				<!--
-				var x="function f(x,y){var i,o=\"\",l=x.length;for(i=0;i<l;i++){if(i>(62+y))" +
-				"y*=2;y%=127;o+=String.fromCharCode(x.charCodeAt(i)^(y++));}return o;}f(\"XJ" +
-				".\\\"6*++f!`1c0:,<o9}=nvwz84d\\\"u0808\\024\\tN\\017Y\\n\\n\\\\\\037\\001\\" +
-				"003\\007\\tE\\026A\\023\\031\\023\\0017\\032\\022\\0229\\rR\\027SLM)#;>: q\\"+
-				"177~tuw;,j(x>+{#dyzh~v7E\\010Y^YCIU\\000@\\027G\\001\\034\\025F\\016\\014\\" +
-				"002\\010]\\030\\033\\036CV\\021\\006D\\023]W!3\\0037l,o|5;/?9? o?\\177!&6&\\"+
-				"\"%piv40te\\\"\\006I@J\\\\WJ;J692$/\\017GDI\\006\\025YAFG$%Y\\025 !_036RB\\" +
-				"003H12ZR=\\nO0^Z\\177$\\003[9+<ie\\014O32ZR.\\tM0^Z8+\\rN\\\\^2mN_0g36>BbN2" +
-				"2ZR)\\rN\\\\^\\\\WH\\rL0^Z=,\\016\\\"\\\\35>BbO22ZR)\\014N\\\\^7>.b\\\"t^Z|" +
-				"BbI02ZR-\\017N\\\\^tRB{?FID=.\\016\\\"\\\\16>Bb\\n\\\\^7>.b\\\"726RBaG=5=3v" +
-				"E\\000f9axbZ\\000!bnkgP\\026`\\\"  :\\032SnkV>-\\016\\\"\\\\35>Bb\\n\\\\^hR" +
-				"BP\\\"\\\\74>BbK02ZR/\\rN\\\\^5<.b\\\"[^ZRBk/\\\\^ZRV\\016N0^Z<.\\016\\\"\\" +
-				"\\76>BbI32ZRjb\\\"036RBq1326RB\\017L0^Z?,\\016\\\"\\\\36>BbM12ZR-\\014N\\\\" +
-				"^2<.b\\\"+55>BbW9*r:4\\006N!54(!\\001R:34>BbF706RB\\000K22ZR\\\"\\rM0^Z</\\" +
-				"rN\\\\^69-\\016\\\"\\\\.3=.b\\\"2a3>.b\\\"406RB\\rM0^Z[Kn2TU^HBb\\\"\\\\V0<" +
-				".b\\\"016RBu\\031TlYJR{<JbVH[\\tO0^ZZoE\\016izss&\\tU5{gsiZ\\022o{djw\\027\\"+
-				"004frwVi`\\013\\\\^ZRpb\\\"!27>BbY636RB\\033H22ZR5\\nN0^Z'T\\tN0^Z<.\\016\\" +
-				"\"\\\\25>BbL02ZR*\\017N\\\\^3=.b\\\"Q25>BbI616RB\\013J32ZR%\\014L0^Z7pb\\\"" +
-				"?24>BbC^0*<$J\\030-66>Bb]n^Z/.\\017N\\\\^;8/\\016\\\"\\\\!2?.b\\\"qn7<.b\\\""+
-				"8^$RB\\031U=6m?/\\rR(`e=.\\016\\\"\\\\[S=-\\016\\\"\\\\25>Bb\\033L\\\\]Y_^N" +
-				"22ZRsL\\\"\\\\H]OSc\\020\\\\^5?.b\\\"tQIFXh/326RBB\\\"\\\"^Zus[\\021:okifBV" +
-				"gLcBel\\007P51?Bb(gVsT;\\032Ctjb__\\016O0^Z)(\\017N\\\\^#:/\\016\\\"\\\\)4>" +
-				".b\\\")26>BbQ416RB\\023L02ZR-nJ12ZRjb\\\"116RB\\rO0^Z;-\\016\\\"\\\\24>BbL0" +
-				"2ZR,\\014N\\\\^LVC~C526RB\\006A.-89,\\016\\\"\\\\y2>.b\\\"j&6>!\\003G5.)/\\" +
-				"\"U\\026506RB\\023^'41(1RJJLU[/\\rN\\\\^`:.\\016\\\"\\\\^ZRB`H22ZR)\\014N\\" +
-				"\\^nITj:r^Z|.\\014N\\\\^OUMcN12ZR+\\016N\\\\^|=,\\016\\\"\\\\75>BbH22ZR*\\0" +
-				"14N\\\\^7<.b\\\"106RB\\024P)/3muR\\007s5N iB\\017a,jggU\\003p`t7:\\035\\010" +
-				"]vZ,Bb\\n\\\\^&9/\\016\\\"\\\\$tRB\\032O32ZR4\\tN0^Z&SnS606RB\\nO0^Z@/\\rN\\"+
-				"\\^2>.b\\\"436RB\\rN0^Z=-\\016\\\"\\\\J7>.b\\\"n^Z:.\\016\\\"\\\\67>Bb?>^ZR" +
-				"B\\rL0^Z\\\"!\\017A{.62ub\\\\\\\\^rRB\\036I12ZR8L\\\"\\\\&5<.b\\\":34>Bb\\\""+
-				"\\\"^Z9,\\016\\\"\\\\:3<.b\\\"v3)/u\\tI1^Z8+\\rN\\\\^2mT_6gLcXuz\\027n^Z?,\\"+
-				"016\\\"\\\\lC]Tz1Yz6?.b\\\"u74>Bb+CCNBTz=~pk2'x\\023{pzy\\177^Aeg19/b\\\"`f" +
-				"(Y)S\\037'&_~eY\\013\\\\ ZRB\\034\\\"\\\\B7=.b\\\"336RB\\rN0^Z|Bb&U(@C]~<E]" +
-				"_U\\\\\\014L0^Z>-\\016\\\"\\\\75>BbH02ZR,\\016N\\\\^B7G\\010N0^Z9/\\016\\\"" +
-				"\\\\26>BbH12ZR)\\tO\\\\^,&2\\013MezqR<b\\\"t^Z.)\\017N\\\\^ |BbZ306RB\\004O" +
-				"22ZRB\\034\\\"\\\\54>BbF506RBH\\033216RB\\010I&2#*@\\010M0^Z_Kd)|05>Bb\\025" +
-				"336RBy/W\\\\XVTs2@YhRB\\rO0^ZzUq:ID1?.b\\\"UWi~j\\0009'\\177w9*w\\006zqz{3l" +
-				"Niyus6\\033$27=?*\\0172OOOZ.\\016N\\\\^hRB\\rN0^Z>-\\016\\\"\\\\24>Bb(/M2<." +
-				"b\\\"516RB\\010O0^Z>.\\016\\\"\\\\O6=.b\\\"616RB\\014M0^Z9.\\016\\\"\\\\36>" +
-				"Bb%FG6<.b\\\"?44>BbC406RB\\rN0^Z$/\\016N\\\\^.9.\\016\\\"\\\\63>.b\\\"*17>B" +
-				"b\\026w27>BbH?20=.b\\\"m04>Bb\\016>,(+9\\021]&')<\\177\\\\\\035[R[[)\\014N\\"+
-				"\\^KCYf\\\"\\\\^Z8,\\016\\\"\\\\m1?.b\\\"U[1?.b\\\"436RBO&SM[`Bb\\005316RB~" +
-				"*ZT7>.b\\\"226RB}X+'-#?\\026Z.&<d~[\\000j.W?pY\\026f%t~jS\\025=\\\"XzBb^736" +
-				"RB\\030\\014\\\\^\\\"=.\\016\\\"\\\\(7>.b\\\"(75>BbP326RB\\022/L3hRB\\016O0" +
-				"^ZD+\\rN\\\\^0?.b\\\"226RBP\\\"\\\\G4>.b\\\"736RB\\rN0^ZzBb<326RB]P/804f\\0" +
-				"37A1j!8/\\016\\\"\\\\'2?.b\\\";04>BbG006RB\\001H22ZR9\\nL0^Z;,\\rN\\\\^}gp\\"+
-				"017K/_0=.b\\\"O[PYFv:606RBf%AV7<.b\\\"IYAQGv1z76>Bb\\020\\\\^1>.b\\\"116RB\\"+
-				"nN0^Z;-\\016\\\"\\\\pZR/\\016N\\\\^4>.b\\\"Cyu}k\\036\\036yy`hcINM/lljF\\00" +
-				"6*)RhpX\\016lgXR<b\\\"\\\\ ZR^\\017M0^Z8,\\016\\\"\\\\15>BbI22ZRFkT126RB\\n" +
-				"O0^Z8,\\016\\\"\\\\46>Bb-,P5?.b\\\"516RB\\013L0^Z9-\\016\\\"\\\\H3=.b\\\"51" +
-				"6RB\\tL0^Z>/\\016\\\"\\\\67>Bb&706RB\\000K22ZR\\\"\\025L02ZR7\\016N0^Z;(\\0" +
-				"16N\\\\^-:.\\016\\\"\\\\krzBbO&\\\"#c5\\025W(,.*3F]6(*<,\\033\\023SMUS+\\01" +
-				"4N\\\\^HPsE$laQe\\177t2`CdWBb\\\"\\\\51?Bb\\010hKoEr\\rL0^ZE^d5ocjtMb\\\\\\" +
-				"\\^'T)\\tO\\\\^ZRBb>EhBXc^6lXBXhr;E1(kO\\017M0^Z].\\017N\\\\^1<.b\\\"336RB\\"+
-				"tL0^Z?,\\016\\\"\\\\[6=.b\\\"316RB\\016L0^ZRBb\\\"406RB\\nM0^Z>/\\016\\\"\\" +
-				"\\36>BbL02ZR-\\017N\\\\^C?-\\016\\\"\\\\lZR)\\016N\\\\^5>.b\\\"IHX>,\\016\\" +
-				"\"\\\\04>BbK22ZR*\\014N\\\\^1r/\\016N\\\\^g;+\\016R45sx)\\017N\\\\^0>.b\\\"" +
-				"226RB\\tM0^Z9-\\016\\\"\\\\n7<.b\\\"q-#/\\\"b\\\\\\\\^-kx\\tM0^Z\\\"0\\0275" +
-				"]^ZRBo7U]4=.b\\\"k17>Bb/]14>BbN22ZRsh2436RBOO22ZRFg6DF0>.b\\\"HTJJ+\\rN\\\\" +
-				"^RMt\\177\\026GvCdU\\026\\031v-`Czm\\004QzQjKD%84j\\\" \\036\\033006RB\\nL0" +
-				"^Z>,\\016\\\"\\\\Y5=.b\\\"Y75>BbL32ZRH\\013N0^Z=-\\016\\\"\\\\36>BbHOA1>.b\\"+
-				"\"R35>BbN716RB\\010K32ZR*\\rL0^Z4-\\017N\\\\^>?,\\016\\\"\\\\<YI,\\022L:~a$" +
-				"5\\010D6vGQO\\016O0^ZIp{\\022[p1?.b\\\"426RB{8L^ZRBp*RlZRIr:Mh{|fb\\\\(d{5q" +
-				"\\036\\020rwrklCE)+-%g\\026 )k.z_[\\032oAtov]Px*cjq}\\014ajEcqL\\030.ehglJ-" +
-				"=)i5)\\014O='\\1775w\\003Uy+><#\\003\\027(dou7\\025Ui9j2w\\005N=k.|qXEhva`{" +
-				"RPx?j\\\"B\\034\\\"\\\"?i\\\"w\\036\\014at}'g\\022\\006(d&`qW\\nclsh<\\027\""+
-				",62)"                                                                        ;
+				var x="function f(x,y){var i,o=\"\",l=x.length;for(i=0;i<l;i++){if(i<35)y++;" +
+				"y%=127;o+=String.fromCharCode(x.charCodeAt(i)^(y++));}return o;}f(\"BSFIXG_" +
+				"\\\\\\024P\\020B\\025E6#6f!f#srpx94g$p\\014\\007\\n\\001\\034\\001F\\007Q\\" +
+				"002\\002T\\007\\031\\033\\037\\021]\\016Y\\033\\021\\033\\t?\\022\\032e@v+h" +
+				"*74!(7:=4'tdckhl>+o#u1&p&c|AUAK\\014@\\017\\\\UTLD^\\005G\\022\\\\\\034\\00" +
+				"3\\010]\\013\\013\\007\\003P\\027\\026\\025FQ\\024}9l ,$4\\006<a#bw0<*$$ =t" +
+				":x$-;)/.uns\\017\\rKX\\031\\003NEAYRG0O=8-=4.@GF+$IKK !J01^_tg/789VW#;>?LM?" +
+				"'$%JK;wFG'-//|}\\003\\025\\025\\025z{G\\r\\025\\014\\023\\002\\026JE\\r\\00" +
+				"1\\000\\004ij\\005\\t\\n\\ng`\\r\\t\\014p\\035\\036uqvv\\033\\024})\\033-\\" +
+				"003)~`a\\016\\017dgf\\013\\004nik\\000\\001\\004\\0066RPS89UUX56Z_]23ACB/(B" +
+				"DG$%KKL!\\\"t]^qXY178UV8==RSbMNVUS]U+)*G@../|}V\\177x\\024\\026\\027tu\\035" +
+				"\\033\\034qrp\\t\\014\\005\\010\\t_GAMBOZH\\n\\t\\016\\034\\0357/3&mli`ec%!" +
+				"d)7\\\"\\\"!\\010\\tfeh\\005\\006mmm\\002\\003TSR?8QUW45<<<;7<EBB/(@EG$%JHL" +
+				"!\\\"412_X177TU=:<QRET'##HI $(EF//-BCN}~\\025\\025\\025z{\\034\\033\\032wp\\"+
+				"034\\034\\037lm\\002\\001\\004ijk\\032ef\\r\\016\\rbctqr\\037\\030vtw\\024\\"+
+				"025;xc~sajhqknbqaii\\006\\007yioo<=YQVU:;QYX[01QYBA./IADG$%IIOM\\\"\\\\*204" +
+				"YZ6>::WPwg?#!NODGCXAAO^EN--\\020}~\\020\\027\\025z{~QcFvngi\\177t_`wwXkdnv\\"+
+				"177qWCM8zxg|?\\\"=:.;;(,/!|(9dcd\\n\\013$\\002(\\002,\\002(\\002\\024=@?8\\" +
+				"021:;H^[[01HXBA./P@FG$%P0LMN\\\\]134YZ4;9VW?=>SL\\\" #HI\\\"$(EFI-..C|\\021" +
+				"\\025\\020\\024yz\\021\\035\\032\\032wp\\031\\035\\035\\000mn\\t\\005\\007\\"+
+				"006kd\\001Hg`\\003\\r\\rp\\035\\036\\177%vitu</g\\177|~\\023\\014\\rp\\017\\"+
+				"010!\\n\\013xnkk\\000\\001x-<=\\\\PVU:;TXX[01\\034\\006FCB/(HW]\\\\IM\\025J" +
+				"INQV504YZg>9:WPS^?#!NO!'&KDs[FBMZ|R}~Q\\024\\027\\026{t`tmds\\031\\037\\000" +
+				"mn\\007\\004\\005jkAipt\\177hR\\003\\001`<)$)q%(-70a)\\0355\\001)\\005-\\00" +
+				"1)\\r%\\0013\\005+\\001}\\000\\034\\016=>QVU:;^ZZ70;*\\\\@A./^DFG$%RLLM\\\"" +
+				"\\\\/734YZ+;::WP??< MN#!%&KD/)(,AB+y\\026\\022\\023xy\\026\\027\\030uv\\035" +
+				"\\036\\035rs\\002\\001\\002oh\\003\\004\\007de\\013\\010\\014ab\\npq\\036\\" +
+				"037o4'%1\\177z{\\020\\021rpfttbbff\\013\\004)(\\007\\0000ctIAF?F9:KCO@^\\01" +
+				"0\\014X\\\\@-.WS+;9!/MIL!\\\"MLE[XYZ[>;:WPb9> MNFM\\\"''DE.*,ABnxrm~Jyz\\\\" +
+				"\\033\\032\\032wpmzuf\\000\\002\\003hi\\004\\007\\010efx\\024\\031\\027\\02" +
+				"2jiod\\030g\\032\\033ls +)3$c\\001`<4<3q08/8-%80\\003< >?89=QYY67IY__,-YADE" +
+				"*+QIJK !Q612_X(278UV8<=>SL $ $IJ LR.*,-BC\\025\\021\\022\\177x`\\026\\025\\" +
+				"030uv\\030\\035\\035rs\\005\\001\\002oh\\005\\007\\007de\\010\\t\\014ab\\01" +
+				"0wp\\036\\037|t{t0|z{\\020\\021+kuejc&ro|*`jil\\001\\002`VSR?8XRUX56X^^^3,@" +
+				"B@D)*@NJJ' RJ31^_Ig578UVA^S8= MN'$%JK[s[s[s[s{S{SaS}S\\031\\032\\032wp\\031" +
+				"\\036\\037lmKctr}uRt\\005{\\032UBC;8?246;'ge\\0333$\\\"-%\\\"$z#\\\"'9>\\00" +
+				"4\\005\\006\\007}\\034ilP=>PVU:;13AY\\\\]23\\002-.BFE*+OIJ' -SMo^_266[T=8;P" +
+				"Q>< MNX\\\\ MINNMMNKHn\\007\\016\\n\\026\\033^\\022\\027\\030uvA\\037\\025\\"+
+				"033\\022B\\024\\027\\014\\024\\021F\\\\R\\004\\016\\t\\014ab\\014rrr\\037\\" +
+				"030tvtx\\025\\026|z~~\\023\\014df`d\\t\\n\\034:\\n:\\022:jno<=PPT9:\\014-/;" +
+				"*:8?XAA./61;1\\027JKK !\\n222_XQFGGDCNp:9>LMc\\177/-Scfnbj\\\"{z\\177AF\\rs" +
+				"\\022KF\\017\\rsCFNBJs\\022mno\\026ijw\\t\\n\\ng`\\016\\017\\017\\034\\035q" +
+				"st\\031\\0325\\024\\025\\022\\036f\\017\\013\\004\\021\\025\\023\\016\\010\\"+
+				"t\\n\\013\\004\\005\\006\\007\\002\\030mmP=>PWU:;\\\\ZZ70\\03123CAB/(2N)OIJ" +
+				"' IO0]^245Z[9w#\\\"'9>kgg3#%%JK?/++@A;+\\021\\021~\\177\\037\\027\\024\\027" +
+				"tu\\023\\033\\036\\035rs\\017\\007\\000\\003hi\\021\\003\\n\\tfg\\t\\017\\r" +
+				"\\017\\034\\0359%svv\\033\\024nfj=y}\\177\\014\\r3bde\\n\\013\\021\\006\\00" +
+				"7\\017\\004\\003\\016\\0102?#SVU:;\\03256\\031$,$+DAB/()*+$+,01LN0]^}066[TM" +
+				"|53Maml}'Y<du|})7I)',%\\036\\021\\025\\026\\031\\020\\013\\\\[]\\032\\031\\" +
+				"034qr\\037\\003\\001noj\\022q\\003\\013\\tfg\\t\\017\\016c\\034wps\\030\\03" +
+				"1vtx\\025\\026\\036|}~\\023\\014gbc\\010\\tdgh\\005\\006lom\\002\\003QRR?86" +
+				"(*XZZ70ZX\\\\@-.F@FF+$BHIL!\\\"9103XY91:9VW1;??LM!#$IJ;))*G@\\177g)\\020\\0" +
+				"21~\\177\\033\\036Q{\\nuv\\030\\035\\022\\\\\\030\\014\\037\\024\\\\\\004\\" +
+				"007\\006kdO\\003\\001\\025\\026\\033Zrkd>p&\\014&\\000.\\004.\\000&\\014&\\" +
+				"n>\\022>bdf\\013\\004kjk\\000\\001moP=>=<!.\\023450)'%+<!@BC();\\007\\024\\" +
+				"002F\\031\\022\\r\\024btrD::6+'9V)PQ\\\"&F}t{|*kuvhi,.-BC\\021\\022\\022\\1" +
+				"77x{\\001`\\034\\032\\032wp\\031\\034\\037lm\\004\\002\\004ij\\005\\010\\tf" +
+				"g\\n\\r\\016c\\034\\025\\023mtwv\\033\\024yy{\\020\\021z~`\\r\\016age\\n\\0" +
+				"13jij\\007\\000noo<=V+Q0TWX56X]]23DAB/(\\033*+;9GONM\\\"\\\\&9*z267TUm7$#R-" +
+				"LMg32I4KD&#h&,,/|}\\032\\024\\026\\025z{\\026\\034\\030\\033pq\\022\\034\\0" +
+				"03\\001no\\006\\004\\005\\007de\\020\\014\\017\\rbcptqs\\030\\0318r{y\\026\\"+
+				"027.\\025\\007\\006\\036ebc\\010\\t\\n\\013\\004\\005\\010\\t\\r\\014\\017\\"+
+				"0004VSS89,:+*12 \\027$;:3FBD)*\\\"?\\003(\\n91\\000@I\\177v_}[goOKJnMjJ(sEP" +
+				"DchbyS/R.*,/|}\\026\\013\\t\\027\\026\\027tu\\026\\005\\031\\035\\036sl\\00" +
+				"1\\001\\003hi\\006\\003\\n\\tfg`\\037bc|\\177tpt\\031\\032ced\\021\\r>\\021" +
+				"\\022\\007bab\\017\\010\\037aeh\\005\\006mmm\\002\\003PSR?8SWW45\\\\[\\\\12" +
+				"\\037CCM\\006K@IOAK\\000[MCJ``u<?;;'m;9;PQv%<:'0J#%'DE-(,AB\\177OHTK\\021\\" +
+				"027\\026{tC\\032\\032\\034qr\\177lmnonpcu\\016\\010\\ng`\\n\\017\\017\\034\\"+
+				"0352\\006\\001\\005\\032\\033\\024\\025\\016\\014\\004\\033\\002\\013cab\\0" +
+				"17\\010)\\nu\\004\\005 /`d\\030hWP>?\\037P,O\\017\\t\\031\\026\\037B\\rXG@." +
+				"/\\027\\030@\\n,\\n \\n$\\n o]^_X177TU+IxQR?#!NOQ!''DE1),-BC\\t\\021\\022\\" +
+				"023xy\\t\\021\\030\\031vw\\001\\031\\036\\037lm\\000\\001\\004\\005jk\\016\\"+
+				"013\\t\\013`a\\004e\\021qss\\030\\0317'3trvr=a#\\177t4gyg,ehi\\006\\007(\\0" +
+				"01\\002\\017\\016=>#\\n!\\024?\\0365670\\027>\\021>3\\0345RD\\017\\027ONK' " +
+				"\\025U7zwfjf[uTU:9<QR<\\\"!NO]DO&()FG--.C|\\027\\023\\023xy\\023\\024\\030u" +
+				"v\\035\\035\\035rs\\007\\003\\002oh\\001\\004\\007deu\\020\\017\\003\\ncb\\" +
+				"035\\036uxp\\032e`/7p#m =%%7!)n\\177~sr#s\\002t7w\\024 \\007\\007\\013&\\02" +
+				"4\\006\\000\\nD\\023D\\010\\n\\0003\\003\\023\\0337\\030\\031\\005\\036W\\0" +
+				"35\\025\\025\\017\\nS<)l?2465,s0'&w& ).z<s\\177l121r'q\\\"v\\033\\021\\037J" +
+				"\\014WIA\\023A^LBHB\\001H\\014^\\037h\\027j\\025\\005V\\026R\\034O_I;h;o<m " +
+				"g&&#?/#;)rx\",35)"                                                           ;
 				while(x=eval(x));
 				//-->
 				//]]>
