--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,10 @@ title: Hadrien's < portfolio >
 	  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css'>
 	  <link rel='stylesheet' href='https://s.plurk.com/0e89357f530f0a843c68440a020d4eb5.css'>
 	  <link rel="stylesheet" href="/css/style.css">
+	  <!-- Prepare a container for your calendar. 
+		source: https://github.com/IonicaBizau/github-calendar -->
+	  <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
+	  <link rel="stylesheet" href="/dist/github-calendar.css">
 
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
 		<script src='js/jquery.svg3dtagcloud.min.js'></script>
@@ -122,11 +126,24 @@ title: Hadrien's < portfolio >
 			  </ul>
 			</div>
 
-			<div class="skills-prog">
-				<h3><i class="fa fa-code"></i>Programming Activity</h3>
-						<figure><embed src="https://wakatime.com/share/@8bec9459-e3e7-4121-973f-323f67fadaa4/73c7de77-8b34-4361-9b21-5bdca8725c97.svg"></embed></figure>
-						<br>
-						<figure><embed src="https://wakatime.com/share/@8bec9459-e3e7-4121-973f-323f67fadaa4/6e92792e-0790-4f44-8250-e2c5625de656.svg"></embed></figure>
+<div class="skills-prog">
+		<h3><i class="fa fa-code"></i>Programming Activity</h3>
+
+				<br>
+				<!-- Prepare a container for your calendar. -->
+				<div class="calendar">
+					<!-- Loading stuff -->
+					Loading the data just for you.
+				</div>
+				<script>
+					new GitHubCalendar(".calendar", "HP-Nunes");
+				</script>
+				<br>
+
+					<figure><embed src="https://wakatime.com/share/@8bec9459-e3e7-4121-973f-323f67fadaa4/73c7de77-8b34-4361-9b21-5bdca8725c97.svg"></embed></figure>
+				<br>
+					<figure><embed src="https://wakatime.com/share/@8bec9459-e3e7-4121-973f-323f67fadaa4/6e92792e-0790-4f44-8250-e2c5625de656.svg"></embed></figure>
+					<font size="8" color="#2ca02c">Other: </font><img class="rig-img" title ="Python Pandas" src="/images/svgs/python_logo.svg" style="width:350px;height:150px;">
 			</div>
 	
 
